<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg" >

    <com.dling61.calendarschedule.views.TitleBarView
        android:id="@+id/titleBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </com.dling61.calendarschedule.views.TitleBarView>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleBar"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:id="@+id/signin_inputs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:orientation="vertical"
            android:paddingTop="16dp" >

            <TextView
                android:id="@+id/tv_new_activity_name"
                style="@style/tvTitleStyle"
                android:layout_width="fill_parent"
                android:layout_marginRight="@dimen/margin_right"
                android:singleLine="true"
                android:text="@string/request_password_reset"
                android:textSize="@dimen/text_name" />

            <TextView
                style="@style/tvTitleStyle"
                android:layout_width="match_parent"
                android:text="@string/enter_email"
                android:textColor="@color/me_selected"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/txt_email"
                style="@style/edittextStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <Button
                android:id="@+id/btn_reset_password"
                style="@style/buttonStyle"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/reset_password" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>