<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg" >

    <RelativeLayout
        android:id="@+id/createaccount_topbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/me_unselected" >

        <TextView
            android:id="@+id/signin_top_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layout_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_back_selector"
            android:padding="@dimen/margin_top" >

            <ImageView
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back" />
        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/createaccount_topbar"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:id="@+id/signin_inputs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            android:paddingTop="30dp" >

            <EditText
                android:id="@+id/account_name_input"
                style="@style/edittextStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:hint="@string/name"
                android:singleLine="true" />

            <EditText
                android:id="@+id/account_mail_input"
                style="@style/edittextStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <EditText
                android:id="@+id/account_password_input"
                style="@style/edittextStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true" />

            <EditText
                android:id="@+id/account_mobile_input"
                style="@style/edittextStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:hint="@string/title_mobile"
                android:inputType="number"
                android:singleLine="true" />

            <Button
                android:id="@+id/btn_create"
                style="@style/buttonStyle"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/create_account" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>