<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_schedule" >

    <ImageButton
        android:id="@+id/btn_add_activity"
        style="@style/buttonStyle"
        android:layout_alignParentBottom="true"
        android:background="@drawable/me_border"
        android:src="@drawable/button_add" />

    <ListView
        android:id="@+id/activityListView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_add_activity"
        android:layout_alignParentTop="true"
        android:cacheColorHint="#00000000"
        android:divider="@color/bg_participant_activity_title"
        android:dividerHeight="1dp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/layout_no_activity"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/btn_add_activity"
        android:layout_below="@id/activityListView"
        android:layout_centerInParent="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/your_activity"
                android:textColor="@color/me_unselected"
                android:textSize="@dimen/text_name"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/have_no_activity_first"
                android:textColor="@color/text_activity_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/have_no_activity_second"
                android:textColor="@color/text_activity_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/have_no_activity_third"
                android:textColor="@color/text_activity_description" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>