<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg" >

     <com.dling61.calendarschedule.views.TitleBarView
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:id="@+id/titleBar"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleBar"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:id="@+id/signin_inputs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_right"
            android:orientation="vertical"
            android:paddingTop="16dp" >

            <EditText
                android:id="@+id/txt_email"
                style="@style/edittextStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <EditText
                android:id="@+id/txt_password"
                style="@style/edittextStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true" />

            <Button
                android:id="@+id/signin_btn"
                style="@style/buttonStyle"
                android:layout_marginTop="@dimen/margin_top"
                 android:paddingBottom="@dimen/margin_top"
                android:text="@string/signin" />

            <LinearLayout
                android:id="@+id/layoutForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal"
                android:paddingTop="@dimen/margin_top"
                android:paddingBottom="@dimen/margin_top"
                android:background="@drawable/btn_back_selector" >

                <TextView
                    android:id="@+id/tvForget"
                    style="@style/tvTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="@dimen/margin_right"
                    android:singleLine="true"
                    android:text="@string/forgot_password"
                    android:layout_gravity="center_vertical"
                    android:textColor="#787878" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/forget"
                    android:layout_gravity="center_vertical" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>