<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_schedule" >

    <RelativeLayout
        android:id="@+id/layout_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:visibility="visible" >

        <Button
            android:id="@+id/btn_today"
            android:layout_width="@dimen/width_btn_schedule_page"
            android:layout_height="@dimen/height_btn_schedule_page"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_right"
            android:background="@drawable/today_border"
            android:text="@string/today"
            android:textColor="@color/text_today_schedule" 
            android:textSize="17dp"/>

        <ImageButton
            android:id="@+id/btn_refresh"
            android:layout_width="@dimen/width_btn_schedule_page"
            android:layout_height="@dimen/height_btn_schedule_page"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="7dp"
            android:background="@drawable/today_border"
            android:padding="3dp"
            android:src="@drawable/refresh" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/btn_refresh"
            android:layout_toRightOf="@id/btn_today" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" >

                <Button
                    android:id="@+id/btn_all"
                    android:layout_width="@dimen/width_btn_schedule_page"
                    android:layout_height="@dimen/height_btn_schedule_page"
                    android:layout_centerVertical="true"
                    android:background="@drawable/me_unselected"
                    android:text="@string/all"
                    android:textColor="@color/btn_schedule_unselected"
                     android:textSize="17dp" />

                <Button
                    android:id="@+id/btn_me"
                    android:layout_width="@dimen/width_btn_schedule_page"
                    android:layout_height="@dimen/height_btn_schedule_page"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/btn_all"
                    android:background="@drawable/btn_schedule_unselected"
                    android:text="@string/me"
                    android:textColor="@color/me_unselected"
                     android:textSize="17dp" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

  
  

        <ImageButton
            android:id="@+id/btn_add_activity"
            style="@style/buttonStyle"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/me_border"
            android:src="@drawable/button_add" />
  
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_add_activity"
        android:layout_below="@id/layout_top"
        android:background="@color/white" >

        <ExpandableListView
            android:id="@+id/list_expandable_schedule"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dp"
            android:cacheColorHint="#00000000"
            android:childDivider="@color/bg_participant_activity_title"
            android:childIndicatorLeft="@dimen/margin_left"
            android:childIndicatorRight="@dimen/margin_right"
            android:divider="@android:color/transparent"
            android:dividerHeight="1dp"
            android:groupIndicator="@null"
            android:visibility="gone" >
        </ExpandableListView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_no_schedule"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/btn_add_activity"
        android:layout_below="@id/layout_top"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/your_schedule"
                android:textColor="@color/me_unselected"
                android:textSize="@dimen/text_name"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/have_no_schedule_first"
                android:textColor="@color/text_activity_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/have_no_schedule_second"
                android:textColor="@color/text_activity_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/have_no_schedule_third"
                android:textColor="@color/text_activity_description" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>